Added index maker.

--- a/cpp/src/marrow/CMakeLists.txt
+++ b/cpp/src/marrow/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.10)
 project(marrow)
 
 add_library(marrow INTERFACE)
-target_sources(marrow INTERFACE compare.h)
+target_sources(marrow INTERFACE compare.h string_array.h index.h)
