--- a/python/conda/meta.yaml
+++ b/python/conda/meta.yaml
@@ -3,15 +3,11 @@ package:
   version: {{ environ.get('GIT_DESCRIBE_TAG', 'dev') }}
 
 build:
-  number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
-  {% if environ.get('GIT_DESCRIBE_NUMBER', '0') == '0' %}string: py{{ environ.get('PY_VER').replace('.', '') }}_0
-  {% else %}string: py{{ environ.get('PY_VER').replace('.', '') }}_{{ environ.get('GIT_BUILD_STR', 'GIT_STUB') }}{% endif %}
-  script_env:
-    - CC
-    - CXX
+  number: 1
+
 
 source:
-  git_url: ../
+  path: ../..
 
 requirements:
   build:
@@ -31,4 +27,5 @@ test:
 
 about:
   summary: Apache arrow sort and merge library
-  license_file: ../LICENSE.txt
+  license_file: LICENSE.txt
+
