Added python binding. (#1)
* Start to add python bindings.

* python binding tested and works. Makefile still probramatic.

* Added conda package making.

* Fixed conda package building.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /cpp/cmake-build-*
 .idea
 *.swp
+/python/pymarrow.cpython-38-x86_64-linux-gnu.so
+/python/Miniconda*
+/python/env
+.eggs
+*.egg-info
+tmp
+/python/build
